--- a/indx.html
+++ b/indx.html
@@ -25,9 +25,7 @@
             </h3>
             <img src="https://via.placeholder.com/150" alt="Place holder image" width="150" height="150">
             <img src="Assets//persona kawthar.jpg" alt="Place holder image" width="150" height="150">
-
-        </section>
-        <h3>Tables</h3>
+            <h3>Tables</h3>
         <table >
             <tr>
                 <th>Header 1</th>
@@ -42,6 +40,30 @@
                 <td>Data 4</td>
             </tr>
         </table>
+
+        </section>
+        
+        <section id="section2">
+            <h2>Forms and inputs</h2>
+            <form>
+                <label for="name">name:</label>
+                <input type="text" id="name" name="name"><br>
+                <label for="email">email:</label>
+                <input type="email" id="email" name="email"><br>
+                <label for="password">password:</label>
+                <input type="password" id="password" name="password"><br>
+                <input type ="submit" values="submit">
+              
+
+
+            </form>
+
+        </section>
+
+        <section id="section3">
+            <h2>css basics</h2>
+
+        </section>
     </header>
 
 </body>
