--- a/indx.html
+++ b/indx.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <!-- internal-->
+    <style>
+        h4 {
+            color: blue;
+            font: optional;
+        }
+
+      
+    </style>
 </head>
 <body>
     <header>
         <h1>
             HTML CSS basics
         </h1>
+        <h4>Hello all</h4>
         <nav> 
             <ul>
                 <li><a href="#section1 ">Section 1</a> </li>
@@ -62,6 +73,8 @@
 
         <section id="section3">
             <h2>css basics</h2>
+            <!-- inline style -->
+            <p style="color: red; font-weight: 400;">this is example of css</p>
 
         </section>
     </header>
